--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,12 +2,14 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     >
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="">首页</a>
+      <a mat-list-item href="new">制作格子</a>
+      <mat-divider></mat-divider>
+
     </mat-nav-list>
+
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar cåolor="primary">
@@ -27,3 +29,4 @@
 
   </mat-sidenav-content>
 </mat-sidenav-container>
+
